# brio_assembly_application

./: CMakeLists.txt  README.md  package.xml
brio_assembly_executive/: CMakeLists.txt  package.xml
brio_assembly_executive/include/: Gripper.h  Move.h  PieceFinalPoses.h  RobotBasePoses.h  TfPublisher.h
brio_assembly_executive/src/: Gripper.cpp  Move.cpp  PieceFinalPoses.cpp  PublishTransform.cpp  RobotBasePoses.cpp  TfPublisher.cpp  ThreadExample.cpp  nou.cpp
brio_assembly_vision/: CMakeLists.txt  README.md
brio_assembly_vision/src/: DepthImageProjection.cpp  Final.cpp
brio_assembly_vision/srv/: SendStampedPose.srv
brio_assembly_vision_new/: CMakeLists.txt  package.xml
brio_assembly_vision_new/include/brio_assembly_vision_new/: DepthImageProjection.h
brio_assembly_vision_new/msg/: Container.msg
brio_assembly_vision_new/src/: DepthImageProjection.cpp  Final_Updated.cpp
brio_assembly_vision_new/srv/: Is_This_Easier.srv  TrasformStamped.srv
brio_vision/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  package.xml~
brio_vision/catkin_generated/: brio_vision-msg-extras.cmake.installspace.in  brio_vision-msg-paths-context.py  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
brio_vision/catkin_generated/installspace/: brio_vision-msg-paths-context.py  brio_vision-msg-paths.cmake  brio_vision.pc  brio_visionConfig.cmake
brio_vision/cmake/: brio_vision-genmsg-context.py  brio_vision-genmsg.cmake
brio_vision/devel/: .catkin  .rosinstall  setup.sh
brio_vision/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
brio_vision/devel/include/brio_vision/: Container.h  Data_Type.h  Is_This_Easier.h  Is_This_EasierRequest.h  Is_This_EasierResponse.h
brio_vision/devel/lib/brio_vision/: opencv_test
brio_vision/devel/lib/pkgconfig/: brio_vision.pc
brio_vision/devel/lib/python2.7/dist-packages/brio_vision/msg/: _Container.py  _Data_Type.py  __init__.py
brio_vision/devel/lib/python2.7/dist-packages/brio_vision/srv/: _Is_This_Easier.py  __init__.py
brio_vision/devel/share/brio_vision/cmake/: brio_vision-msg-extras.cmake  brio_vision-msg-paths.cmake  brio_visionConfig.cmake
brio_vision/devel/share/common-lisp/ros/brio_vision/msg/: Container.lisp  Data_Type.lisp  _package.lisp  _package_Container.lisp  _package_Data_Type.lisp  brio_vision-msg.asd
brio_vision/devel/share/common-lisp/ros/brio_vision/srv/: Is_This_Easier.lisp  _package.lisp  _package_Is_This_Easier.lisp  brio_vision-srv.asd
brio_vision/gtest/: CTestTestfile.cmake  Makefile
brio_vision/msg/: Data_Type.msg
brio_vision/src/: opencv_test.cpp
brio_vision/srv/: Is_This_Easier.srv  Is_This_Easier.srv~
src/: Final.cpp
srv/: Finish_Movement.srv  SendStampedPose.srv
